# hermes-guardian

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THEORY.md  __init__.py  activity_rows.py  activity_store.py  approval_engine.py  approval_rules.py  command_handlers.py  core.py  dashboard_server.py  dashboard_views.py  hook_handlers.py  hooks.py  plugin.yaml  presentation.py  pyproject.toml  requirements-dev.txt  runtime_state.py  security.py  security_filters.py  session_handlers.py  state.py  theory.md  tool_policy.py  tool_policy_details.py
.github/workflows/: llm-verifier.yml  tests.yml
benchmarks/: __init__.py  agentdojo_guardian.py  approval_fatigue.py  guardian_adversarial.py  hermes_cli_e2e_probe.py  hermes_e2e_eval.py
benchmarks/baselines/: RESULTS.md  adversarial.main.json  agentdojo.main.json  approval_fatigue.main.json
dashboard/: README.md  manifest.json  package.json  plugin_api.py  tsconfig.json
dashboard/src/: GuardianPage.tsx  constants.ts  index.tsx  sdk.ts  types.ts
dashboard/src/api/: client.ts
dashboard/src/components/: Button.css  Button.tsx  CheckDestination.tsx  DecisionStep.tsx  Field.tsx  IconButton.css  IconButton.tsx  ImpactPreview.tsx  Modal.css  Mono.tsx  OverrideModal.tsx  PreviewSend.tsx  RiskBanners.css  RiskBanners.tsx  RuleModal.tsx  ToastRegion.css  ToastRegion.tsx  TrustPill.tsx  TrustedDestinationModal.tsx
dashboard/src/hooks/: useApprovals.ts  useDestinations.ts  useGuardianActions.ts  useHistory.ts  usePerformance.ts  usePolicy.ts  useToasts.ts
dashboard/src/lib/: attention.test.ts  attention.ts  deepLinks.test.ts  deepLinks.ts  format.ts  rules.ts
dashboard/src/styles/: base.css  forms.css  index.css
dashboard/src/tabs/: ActivityTab.css  ActivityTab.tsx  BlocksTab.tsx  DestinationsTab.css  DestinationsTab.tsx  HistoryTab.css  HistoryTab.tsx  PerformanceTab.tsx  ProtectionTab.css  ProtectionTab.tsx  ReadingTab.css  ReadingTab.tsx  ReviewTab.css  ReviewTab.tsx  RulesTab.tsx  SettingsTab.css  SettingsTab.tsx  SharingTab.css  SharingTab.tsx  ToolsTab.css  ToolsTab.tsx  WhatsYoursTab.css  WhatsYoursTab.tsx
integrations/: __init__.py  cron_notifications.py
language_packs/: __init__.py  ar.py  bn.py  de.py  en.py  es.py  fa.py  fr.py  hi.py  id.py  ja.py  ko.py  mr.py  pcm.py  pt.py  ru.py  runtime.py  ta.py  te.py  tl.py  tr.py  ur.py  vi.py  zh.py
privacy/: __init__.py  action_details.py  approvals.py  capability.py  destinations.py  llm.py  module.py  policy.py  provenance.py  rules.py  taint.py  terminal_analysis.py  tool_policy.py
refactor/: 00-overview-and-charter.md  01-charter.md  01-destination-trust-model.md  02-capability-and-policy-engine.md  02-dashboard.md  03-commands.md  03-config-and-surfaces.md  04-config.md  04-migration-and-tests.md  05-migration.md  README.md
runtime/: __init__.py  activity_rows.py  activity_store.py  shared_context.py  state.py
scripts/: _refactor_analysis.py
security/: __init__.py  module.py  scanner.py
tests/: conftest.py  live_llm.py  support.py  test_adversarial_corpus.py  test_adversarial_exfiltration.py  test_agentdojo_adapter.py  test_approval_fatigue_benchmark.py  test_approval_permit_options.py  test_approvals.py  test_calendar_classification.py  test_capability.py  test_commands_debug_history.py  test_commands_destinations.py  test_commands_ia.py  test_commands_rules_failures.py  test_communications_taxonomy.py  test_config_ia.py  test_config_policy_doc.py  test_cron_message_send_history.py  test_cron_notifications.py  test_cross_channel_lockdown.py  test_dashboard_activity.py  test_dashboard_ia_v2.py  test_dashboard_policy.py  test_dashboard_trust.py  test_destination_trust.py  test_fail_closed_invariants.py  test_hermes_cli_e2e_probe.py  test_hermes_e2e_eval.py  test_hermes_e2e_live.py  test_hermes_guardian.py  test_hooks_registration.py  test_invariants.py  test_language_pack_config.py  test_language_packs.py  test_live_llm_config.py  test_llm_and_public_reads.py  test_llm_context_settings.py  test_llm_verifier_live.py  test_loader_contract.py  (+21 more)
tests/fixtures/: _build_decision_corpus.py  adversarial_corpus.json  decision_corpus.json  e2e_conversations.json
ui/: __init__.py  commands.py  dashboard.py  presentation.py
