# Hermes Guardian project metadata and tooling configuration.
#
# Guardian is distributed as a Hermes *user plugin*: it is cloned into
# ~/.hermes/plugins/hermes-guardian and loaded by Hermes at runtime by absolute
# path (see __init__.py and core.py). It is intentionally NOT a pip-installable
# package, so this file deliberately omits a [build-system] table. Its purpose is
# to provide project metadata, a manifest of optional dependencies, and tool
# configuration (pytest). For a pinned, reproducible developer/CI install, use
# requirements-dev.txt.

[project]
name = "hermes-guardian"
version = "3.0.0"
description = "Hermes Guardian security and egress policy enforcement for personal Hermes agents"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Pei", email = "hello@kevinpei.com" }]
keywords = [
    "hermes",
    "agent",
    "security",
    "privacy",
    "prompt-injection",
    "information-flow",
    "egress",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

# Phone-number taint classification (privacy/tool_policy.py) uses Google's
# libphonenumber to tell a real personal line from a placeholder/fictional number
# (the 555 and drama ranges that fill skill docs) or an inherently public
# toll-free/premium business line. There is no comparable stdlib facility, so this
# is a hard runtime dependency.
dependencies = ["phonenumbers>=8"]

# Apart from the above, the core plugin is standard-library Python. The extras
# below document optional integrations. They are imported lazily with fallbacks,
# so Guardian (and its test suite) runs without them; install an extra only when
# you exercise that integration.
[project.optional-dependencies]
# Dashboard plugin API adapter (dashboard/plugin_api.py). In a normal deployment
# FastAPI is provided by the host Hermes dashboard service; install this only to
# exercise the real API routes locally.
dashboard = ["fastapi>=0.110"]
# Telegram copy-button cron notification delivery
# (integrations/cron_notifications.py).
telegram = ["python-telegram-bot>=21"]
# Developer / CI tooling. See requirements-dev.txt for exact pins.
dev = ["pytest>=8,<9"]

[project.urls]
Homepage = "https://github.com/kpsuperplane/hermes-guardian"
Repository = "https://github.com/kpsuperplane/hermes-guardian"
Issues = "https://github.com/kpsuperplane/hermes-guardian/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Live LLM tests call a real model over the network. They are marked `llm` and
# SKIPPED by default via a conftest hook; they run only on explicit opt-in —
# `pytest --run-llm` (or GUARDIAN_RUN_LLM=1) — which is what the dedicated CI job passes.
markers = [
    "llm: live tests that call a real model; skipped unless --run-llm / GUARDIAN_RUN_LLM",
]
